# specification

./: .gitignore  Cargo.toml  README-zh.md  README.md  VERSION  go.mod  go.sum  rustfmt.toml
.github/workflows/: build.yml  java-release.yaml  java-snapshot.yaml  python-release.yaml  release.yaml  rust-release.yaml  testing.yml
api/v1/: build.linux-x86_64.sh  build.osx-aarch.sh
api/v1/access-control/: authentication.proto  authentication.proto.bk  limiter.proto
api/v1/config_manage/: config_file.proto  config_file_response.proto  grpc_config_api.proto
api/v1/fault-tolerance/: circuitbreaker.proto  faultdetector.proto
api/v1/fault_tolerance/: circuitbreaker.proto  fault_detector.proto
api/v1/model/: code.proto  model.proto  namespace.proto
api/v1/security/: auth.proto  block_allow_list.proto  tsf_istio_ca.proto
api/v1/service/: healthcheck.proto  instance.proto  namespace.proto  service.proto
api/v1/service_manage/: client.proto  configrelease.proto  contract.proto  grpcapi.proto  heartbeat.proto  request.proto  response.proto  service.proto
api/v1/traffic-control/: loadbalancer.proto  router.proto
api/v1/traffic_manage/: fault_injection.proto  lane.proto  lossless.proto  ratelimit.proto  routing.proto  traffic_mirroring.proto
source/go/: build.sh  go.mod  go.sum
source/java/: build-mac.sh  build.ps1  build.sh
source/java/polaris-specification/: pom.xml
source/java/polaris-specification-test/: .gitignore  pom.xml
source/python/: LICENSE.txt  README.md  build.py  build.sh  pyproject.toml
source/python/src/polarismesh_specification/: __about__.py
source/python/src/polarismesh_specification/api/: __init__.py
source/python/src/polarismesh_specification/api/v1/config_manage/: __init__.py  __init__.pyi  config_file_pb2.py  config_file_pb2.pyi  config_file_response_pb2.py  config_file_response_pb2.pyi  grpc_config_api_pb2.py  grpc_config_api_pb2.pyi  grpc_config_api_pb2_grpc.py
source/python/src/polarismesh_specification/api/v1/fault_tolerance/: __init__.py  __init__.pyi  circuitbreaker_pb2.py  circuitbreaker_pb2.pyi  fault_detector_pb2.py  fault_detector_pb2.pyi
source/python/src/polarismesh_specification/api/v1/model/: __init__.py  __init__.pyi  code_pb2.py  code_pb2.pyi  model_pb2.py  model_pb2.pyi  namespace_pb2.py  namespace_pb2.pyi
source/python/src/polarismesh_specification/api/v1/security/: __init__.pyi  auth_pb2.py  auth_pb2.pyi
source/python/src/polarismesh_specification/api/v1/service_manage/: __init__.py  __init__.pyi  client_pb2.py  client_pb2.pyi  configrelease_pb2.py  configrelease_pb2.pyi  grpcapi_pb2.py  grpcapi_pb2.pyi  grpcapi_pb2_grpc.py  request_pb2.py  request_pb2.pyi  response_pb2.py  response_pb2.pyi  service_pb2.py  service_pb2.pyi
source/python/src/polarismesh_specification/api/v1/traffic_manage/: __init__.pyi  ratelimit_pb2.py  ratelimit_pb2.pyi  routing_pb2.py  routing_pb2.pyi
source/python/tests/: build.sh
source/rust/: build.sh
source/rust/polaris-specification/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
source/rust/polaris-specification/proto/: auth.proto  circuitbreaker.proto  code.proto  config_file.proto  config_file_response.proto  contract.proto  fault_detector.proto  grpc_config_api.proto  grpcapi.proto  grpcapi_ratelimiter.proto  lane.proto  lossless.proto  model.proto  namespace.proto  ratelimit.proto  request.proto  response.proto  routing.proto
source/rust/polaris-specification/src/: lib.rs  polaris.metric.v2.rs  v1.rs
specification/v1/access_control_spec/: authentication.md  authorizaton.md
specification/v1/fault-tolerance-spec/: circuitbreaker.md
specification/v1/fault_tolerance_spec/: circuitbreaker.md  faultdetector.md  (+1 more)
src/: lib.rs
(+65 files in other folders)
