[package]
name = "polaris-specification"
version = "0.1.3"
edition = "2021"
authors = ["https://github.com/polarismesh"]
license = "MIT OR Apache-2.0"
description = "Service Governance Specification."
homepage = "https://github.com/polarismesh/specification"
repository = "https://github.com/polarismesh/specification.git"
readme = "README.md"
keywords = ["polaris", "solution", "governance", "specification", "proxyless"]
categories = ["config", "asynchronous", "development-tools"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
prost = "0.11.9"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"
