[package]
name = "polaris-specification"
version = "1.3.2"
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "Service Governance Specification."
homepage = "https://github.com/polarismesh/specification"
repository = "https://github.com/polarismesh/specification.git"
readme = "README.md"
keywords = ["polaris", "solution", "governance", "specification", "proxyless"]
categories = ["config", "asynchronous", "development-tools"]

[dependencies]
bytes.workspace = true
prost.workspace = true
# Only necessary if using Protobuf well-known types:
prost-types.workspace = true

[build-dependencies]
prost-build = "0.11.9"
